homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: apps
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - dashboard
  defaultBackend:
    service:
      name: homelab-dashboard
      port:
        number: 3000
